fix: recovery
