# src/routes/Product.route.ts
@@ -1,78 +1,65 @@
-import { Router, Request, Response, NextFunction } from 'express';
+import { Router } from 'express';
 import { getCustomRepository } from 'typeorm';
+import { getUserByToken, isSeller } from '../functions/Auth';
+import { responseLog } from '../functions/Logs';
+import {
+  create,
+  getAll,
+  getOne,
+  getByFair,
+  remove,
+  update,
+} from '../functions/Products';
 import Product from '../models/Product';
 
 import ProductRepository from '../repositories/Product.repository';
-import CreateProductService from '../services/Product.service';
+import { ProductRequest } from '../services/Product.service';
 
 const routes = Router();
 
-// function logRequest(request: Request, _response: Response, next: NextFunction) {
-//   const { method, originalUrl } = request;
-//   console.info(method + ': ' + originalUrl);
-//   return next();
-// }
-
-// routes.use(logRequest);
-
 routes.get('/', async (_request, response) => {
-  try {
-    const productRepository = getCustomRepository(ProductRepository);
+  const { status, error, products } = await getAll();
 
-    const products = await productRepository.find();
-
-    return response.json(products);
-  } catch (err) {
-    // log erro
-    console.error(err);
-    return response.status(400).json({ error: err.message });
+  if (status !== 200) {
+    return response.status(status).json({ error });
   }
+
+  return response.status(status).json(products);
 });
 
-routes.get('/:fair', async (request, response) => {
-  try {
-    const { fair } = request.params;
+routes.get('/:fairId', async (request, response) => {
+  const { fairId } = request.params;
+  const { status, error, products } = await getByFair(fairId);
 
-    const productRepository = getCustomRepository(ProductRepository);
-
-    const products = await productRepository.find({ where: { fair: fair } });
-
-    return response.json(products);
-  } catch (err) {
-    // log erro
-    console.error(err);
-    return response.status(400).json({ error: err.message });
+  if (status !== 200) {
+    return response.status(status).json({ error });
   }
+
+  return response.status(status).json(products);
 });
 
-routes.post('/', async (request, response) => {
-  try {
-    const productReq = request.body as Product;
+routes.post('/:fairId', getUserByToken, isSeller, async (request, response) => {
+  const { fairId } = request.params;
+  const body = request.body as ProductRequest;
 
-    const productService = new CreateProductService();
+  const { status, error, product } = await create(fairId, body);
 
-    const product = await productService.execute({ ...productReq });
-
-    return response.json(product);
-  } catch (err) {
-    // log erro
-    console.error(err);
-    return response.status(400).json({ error: err.message });
+  if (status !== 200) {
+    return response.status(status).json({ error });
   }
+
+  return response.status(status).json(product);
 });
 
-routes.get('/id/:id', async (request, response) => {
-  try {
-    const { id } = request.params;
+routes.get('/one/:id', async (request, response) => {
+  const { id } = request.params;
+  const { status, error, product } = await getOne(id);
 
-    const productRepository = getCustomRepository(ProductRepository);
-    const product = await productRepository.findByIds([id]);
-
-    return response.json(product);
-  } catch (err) {
-    console.error(err);
-    return response.status(400).json({ error: err.message });
+  if (status !== 200) {
+    return response.status(status).json({ error });
   }
+
+  return response.status(status).json(product);
 });
 
 routes.get('/filter', async (request, response) => {
@@ -95,49 +82,32 @@ routes.get('/filter', async (request, response) => {
 
     return response.json(products);
   } catch (err) {
-    console.error(err);
+    responseLog(err);
     return response.status(400).json({ error: err.message });
   }
 });
 
-routes.put('/:id', async (request, response) => {
-  try {
-    const { id } = request.params;
-    const { name, type, description, price, fair } = request.body;
+routes.put('/:id', getUserByToken, isSeller, async (request, response) => {
+  const { id } = request.params;
+  const body = request.body as Partial<Product> | Product;
+  const { status, error, product } = await update(id, body);
 
-    // const parsedDate = parseISO(dateFormat(date, 'isoDateTime'));
-
-    const productRepository = getCustomRepository(ProductRepository);
-
-    await productRepository.update(id, {
-      name,
-      type,
-      price,
-      description,
-      fair,
-    });
-
-    const updateProduct = await productRepository.findByIds([id]);
-
-    return response.json(updateProduct);
-  } catch (err) {
-    console.error(err);
-    return response.status(400).json({ error: err.message });
+  if (status !== 200) {
+    return response.status(status).json({ error });
   }
+
+  return response.status(status).json(product);
 });
 
-routes.delete('/:id', async (request, response) => {
-  try {
-    const { id } = request.params;
+routes.delete('/:id', getUserByToken, isSeller, async (request, response) => {
+  const { id } = request.params;
+  const { status, error } = await remove(id);
 
-    const productRepository = getCustomRepository(ProductRepository);
-    await productRepository.delete(id);
-
-    return response.status(204).json();
-  } catch (err) {
-    console.error(err);
-    return response.status(400).json({ error: err.message });
+  if (status !== 204) {
+    return response.status(status).json({ error });
   }
+
+  return response.status(status).end();
 });
 
 export { routes as productRoute };
